zodの適用
